# obeythetestinggoat

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  functional_tests.py  pyproject.toml  pytest.ini  requirements.txt
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  nginx.template.conf
functional_tests/: tests.py
lists/: tests.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
lists/templates/: base.html  home.html  list.html
lists/tests/: test_db.py  test_home_page.py  test_item_model.py  test_list_page.py
superlists/: settings.py  urls.py
