[tool.poetry]
name = "obeythetestinggoat-on-docker-and-pytest"
version = "0.1.0"
description = "obeythetestinggoat on Docker & Pytest"
authors = [
    "Rowan Molony <rowanmolony@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
lxml = "*"
cssselect = "*"
django = "^1.11"
pygments = "*"
docopt = "*"
requests = "*"
gunicorn = "^20.1.0"
django-environ = "^0.8.1"
Fabric3 = "^1.14.post1"


[tool.poetry.dev-dependencies]
selenium = "^3.7"
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
