[tool.poetry]
name = "obeythetestinggoat-on-docker-and-pytest"
version = "0.1.0"
description = "obeythetestinggoat on Docker & Pytest"
authors = [
    "Rowan Molony <rowanmolony@gmail.com>",
]

[tool.poetry.dependencies]
python = "3.7"
django = "^1.10"
gunicorn = "^19.6"
django-environ = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
